--- a/packages/ui/src/components/vuestic-components/va-card/_variables.scss
+++ b/packages/ui/src/components/vuestic-components/va-card/_variables.scss
@@ -2,7 +2,7 @@
   --va-card-display: block;
   --va-card-position: relative;
   --va-card-overflow: hidden;
-  --va-card-box-shadow: 0 2px 3px 0 rgba(52, 56, 85, 0.25);
+  --va-card-box-shadow: var(--va-box-shadow);
   --va-card-border-radius: 0.375rem;
   --va-card-color: #34495e;
   --va-card-background-color: #ffffff;
