--- a/packages/ui/src/components/vuestic-sass/resources/_css-variables.scss
+++ b/packages/ui/src/components/vuestic-sass/resources/_css-variables.scss
@@ -87,4 +87,7 @@
 
   /* Borders */
   --va-stripe-border-size: 0.25rem;
+
+  /* Shadows */
+  --va-box-shadow: 0 0.25rem 0.5rem 0 rgba(59, 63, 73, 0.15);
 }
